Complete header html and css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="resoucres/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Tortoiseshell Optics</title>
   </head>
+
   <body>
+<!--Header-->
+  <header>
+    <nav class="container">
+
+      <div>
+        <img src="resources\images\logo-white.png">
+        <span>Tortoiseshell Optics</span>
+      </div>
+
+      <div class="menu">
+        <ul>
+          <li>Services</li>
+          <li>Products</li>
+          <li>Contacts</li>
+        </ul>
+      </div>
+
+    </nav>
+
+    <div class="flex container">
+      <div class="main-banner">
+        <h1>DON'T JUST LOOK, SEE.</h1>
+      </div>
+    </div>
+  </header>
+
 
   </body>
 </html>
