--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
     </div>
   </header>
 
+  <!--Icons-->
+  <div class="supporting">
+
+    <div class="icon">
+      <img src="resources/images/paper-icon.png" class="paper-icon">
+      <div>Comprehensive Exams</div>
+    </div>
+
+    <div class="icon">
+      <img src="resources/images/ruler-icon.png">
+      <div>Custom Fittings</div>
+    </div>
+
+    <div class="icon">
+      <img src="resources/images/truck-icon.png">
+      <div>Fast Delivery</div>
+    </div>
+
+  </div
+
 
   </body>
 </html>
