--- a/index.html
+++ b/index.html
@@ -51,7 +51,32 @@
       <div>Fast Delivery</div>
     </div>
 
-  </div
+  </div>
+
+  <!--Info-->
+<div class="container">
+
+  <div class="info">
+
+    <div class="details">
+      <div class="title">
+        PHILOSOPHY
+      </div>
+      <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+    </div>
+
+    <div class="details">
+      <div class="title">
+        Appointments
+      </div>
+      <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+    </div>
+
+  </div>
+
+</div>
+
+<!--Footer-->
 
 
   </body>
