--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 
 <!--Footer-->
 
+<footer class="container">
+  <img src="resources/images/logo-black.png">
+  <div>
+    <p>Copyright Tortoiseshell Optics</p>
+  </div>
+</footer>
 
   </body>
 </html>
